--- a/DCS.Alternative.Launcher/Plugins/Settings/Controls/ViewportsSettingsControl.xaml
+++ b/DCS.Alternative.Launcher/Plugins/Settings/Controls/ViewportsSettingsControl.xaml
@@ -1,8 +1,7 @@
-﻿<UserControl x:Class="DCS.Alternative.Launcher.Plugins.Settings.Views.Controls.ViewportsSettingsControl"
+﻿<UserControl x:Class="DCS.Alternative.Launcher.Plugins.Settings.Controls.ViewportsSettingsControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:DCS.Alternative.Launcher.Plugins.Settings.Views.Controls"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:models="clr-namespace:DCS.Alternative.Launcher.Models"
              d:DesignHeight="450"
