--- a/DCS.Alternative.Launcher/Plugins/Settings/Views/SettingsView.xaml
+++ b/DCS.Alternative.Launcher/Plugins/Settings/Views/SettingsView.xaml
@@ -1,14 +1,15 @@
 ﻿<UserControl x:Class="DCS.Alternative.Launcher.Plugins.Settings.Views.SettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:categories="clr-namespace:DCS.Alternative.Launcher.Plugins.Settings.Views.Categories"
              xmlns:controls="clr-namespace:DCS.Alternative.Launcher.Controls"
-             xmlns:controls1="clr-namespace:DCS.Alternative.Launcher.Plugins.Settings.Views.Controls"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:data="clr-namespace:DCS.Alternative.Launcher.Data"
              xmlns:fluentWpf="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:models="clr-namespace:DCS.Alternative.Launcher.Models"
+             xmlns:settingsControls="clr-namespace:DCS.Alternative.Launcher.Plugins.Settings.Controls"
              xmlns:views="clr-namespace:DCS.Alternative.Launcher.Views"
              d:DesignHeight="450"
              d:DesignWidth="800"
@@ -52,12 +53,43 @@
                 <TabControl Background="Transparent"
                             BorderBrush="#FF2F2F2F"
                             BorderThickness="1,0,0,0"
+                            ItemsSource="{Binding Categories}"
+                            SelectedItem="{Binding SelectedCategory.Value, Mode=TwoWay}"
                             TabStripPlacement="Left">
                     <TabControl.Resources>
 
+                        <data:BooleanToThicknessConverter x:Key="BooleanToThicknessConverter"
+                                                          FalseThickness="5 0 5 0"
+                                                          TrueThickness="25 0 5 0" />
+
+                        <DataTemplate x:Key="TabItemHeaderTemplate">
+                            <TextBlock Margin="{Binding IsHitTestVisible, Converter={StaticResource BooleanToThicknessConverter}}"
+                                       HorizontalAlignment="Left"
+                                       VerticalAlignment="Center"
+                                       FontFamily="{StaticResource Prototype}"
+                                       FontSize="14"
+                                       Foreground="#FFFFFFFF"
+                                       Text="{Binding Name}"
+                                       TextAlignment="Right" />
+                        </DataTemplate>
+
+                        <DataTemplate DataType="{x:Type categories:InstallationSettingsViewModel}">
+                            <controls:InstallationControl Margin="30" />
+                        </DataTemplate>
+
+                        <DataTemplate DataType="{x:Type categories:ViewportSettingsViewModel}">
+                            <settingsControls:ViewportsSettingsControl Margin="30" />
+                        </DataTemplate>
+
+                        <DataTemplate DataType="{x:Type categories:GraphicsSettingsViewModel}">
+                            <categories:GraphicsSettingsView />
+                        </DataTemplate>
+
                         <Style TargetType="TabItem">
                             <Setter Property="MinHeight" Value="30" />
+                            <Setter Property="HeaderTemplate" Value="{StaticResource TabItemHeaderTemplate}" />
                             <Setter Property="BorderBrush" Value="Transparent" />
+                            <Setter Property="IsHitTestVisible" Value="{Binding IsHitTestVisible}" />
                             <Setter Property="Background" Value="Transparent" />
                             <Setter Property="Template">
                                 <Setter.Value>
@@ -65,8 +97,8 @@
                                         <Grid Name="Panel" Cursor="Hand">
                                             <ContentPresenter x:Name="ContentSite"
                                                               Margin="10,2"
-                                                              HorizontalAlignment="Center"
-                                                              VerticalAlignment="Center"
+                                                              HorizontalAlignment="Stretch"
+                                                              VerticalAlignment="Stretch"
                                                               ContentSource="Header" />
                                         </Grid>
                                         <ControlTemplate.Triggers>
@@ -77,27 +109,9 @@
                                     </ControlTemplate>
                                 </Setter.Value>
                             </Setter>
-                            <Setter Property="HeaderTemplate">
-                                <Setter.Value>
-                                    <DataTemplate>
-                                        <TextBlock FontFamily="{StaticResource Prototype}"
-                                                   FontSize="14"
-                                                   Foreground="#FFFFFFFF"
-                                                   Text="{Binding}" />
-                                    </DataTemplate>
-                                </Setter.Value>
-                            </Setter>
                         </Style>
 
                     </TabControl.Resources>
-                    <TabControl.Items>
-                        <TabItem Header="INSTALLATIONS">
-                            <controls:InstallationControl Margin="30" />
-                        </TabItem>
-                        <TabItem Header="VIEWPORTS">
-                            <controls1:ViewportsSettingsControl Margin="30" />
-                        </TabItem>
-                    </TabControl.Items>
                 </TabControl>
             </fluentWpf:AcrylicPanel>
         </Border>
