Removed unused ToggleSwitch Added Advanced Options for Graphics, Camera and Camera Mirrors

--- a/DCS.Alternative.Launcher/Plugins/Settings/Views/SettingsView.xaml
+++ b/DCS.Alternative.Launcher/Plugins/Settings/Views/SettingsView.xaml
@@ -85,6 +85,14 @@
                             <categories:GraphicsSettingsView />
                         </DataTemplate>
 
+                        <DataTemplate DataType="{x:Type categories:CameraSettingsViewModel}">
+                            <categories:CameraSettingsView />
+                        </DataTemplate>
+
+                        <DataTemplate DataType="{x:Type categories:CameraMirrorsSettingsViewModel}">
+                            <categories:CameraMirrorsSettingsView />
+                        </DataTemplate>
+
                         <Style TargetType="TabItem">
                             <Setter Property="MinHeight" Value="30" />
                             <Setter Property="HeaderTemplate" Value="{StaticResource TabItemHeaderTemplate}" />
