--- a/DCS.Alternative.Launcher/Plugins/Settings/Views/Categories/CameraSettingsView.xaml
+++ b/DCS.Alternative.Launcher/Plugins/Settings/Views/Categories/CameraSettingsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DCS.Alternative.Launcher.Plugins.Settings.Views.Categories.GraphicsSettingsView"
+﻿<UserControl x:Class="DCS.Alternative.Launcher.Plugins.Settings.Views.Categories.CameraSettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:controls="clr-namespace:DCS.Alternative.Launcher.Plugins.Settings.Controls"
